--- a/BLAZAMGui/UI/Computers/RegisterPrintersModalContent.razor
+++ b/BLAZAMGui/UI/Computers/RegisterPrintersModalContent.razor
@@ -54,7 +54,7 @@
     }
 
 
-    private async void RegisterSelectedPrinters()
+    private void RegisterSelectedPrinters()
     {
 
         foreach (var printer in selectedPrinters.Where(p => p.ADPrinter == null))
