Change copyright color, fix for remote session error after disposal

--- a/BLAZAMGui/Layouts/MainLayout.razor
+++ b/BLAZAMGui/Layouts/MainLayout.razor
@@ -61,7 +61,7 @@ await InvokeAsync(StateHasChanged);
                         </AuthorizeView>
                     }
                     <MudSpacer />
-                    <AppFooter Class="align-middle" />
+                    <AppFooter Class="ps-2 align-middle" />
 
                 </MudDrawer>
 
