--- a/BLAZAMGui/Copyright.razor
+++ b/BLAZAMGui/Copyright.razor
@@ -2,7 +2,7 @@
 @inject ApplicationInfo ApplicationInfo
 <MudText Class="@Class" 
     
-     Style=@("cursor:pointer; width:max-content; "+this.Style) Color="Color.Tertiary">
+     Style=@("cursor:pointer; width:max-content; "+this.Style) Color="Color.Secondary">
     <MudTooltip Arrow=true ShowOnHover=false ShowOnClick=true Style="width:max-content" Text="@ApplicationInfo.RunningVersion.Version">
         BLAZAM&#8482; @DateTime.Now.Year
     </MudTooltip>
