--- a/BLAZAMGui/Layouts/AppFooter.razor
+++ b/BLAZAMGui/Layouts/AppFooter.razor
@@ -1,29 +1,44 @@
+@using System.Diagnostics
 @inherits AppComponentBase
 <MudStack Row=true Class=@("relative mud-width-full "+Class)>
-   
-            <Copyright />
-            @if (AutoUpdateService.IsUpdatedScheduled)
-            {
-                <MudTooltip @onclick=@((c)=>{Nav.NavigateTo("/settings/update");})
-                    Class="mud-theme-info"
-                    Style="width:max-content" 
-                    Text="An automatic update is scheduled. Click for details">
 
-                    <MudIcon Icon=@("fa-solid fa-circle-up") />
+    <Copyright />
+    @if (AutoUpdateService.IsUpdatedScheduled)
+    {
+        <AuthorizeView Roles="@UserRoles.SuperAdmin">
+            <Authorized>
+                <MudTooltip @onclick=@((c)=>{Nav.NavigateTo("/settings/update");})
+                            Class="mud-theme-info"
+                          
+                            Style="width:max-content"
+                            Text="An automatic update is scheduled. Click for details">
+
+                    <MudIcon Color="@Color.Success" Icon=@Icons.Material.Filled.ArrowCircleUp />
                 </MudTooltip>
-            }
-            <MudSpacer/>
-@*
+            </Authorized>
+            <NotAuthorized>
+                <MudTooltip Class="mud-theme-info"
+                            Style="width:max-content"
+                            Text="An automatic update is scheduled.">
+
+                    <MudIcon Color="@Color.Success" Icon=@Icons.Material.Filled.ArrowCircleUp />
+                </MudTooltip>
+            </NotAuthorized>
+        </AuthorizeView>
+
+    }
+    <MudSpacer />
+    @*
     <MudTooltip Class="mud-theme-info" Style="width:max-content" Text="@ApplicationInfo.RunningVersion.Version">
 
-            Version: @ApplicationInfo.RunningVersion.ShortVersion
-            </MudTooltip>*@
+    Version: @ApplicationInfo.RunningVersion.ShortVersion
+    </MudTooltip>*@
 
 
 </MudStack>
-@code{
+@code {
     [Parameter]
-    public string? Class{ get; set; }
+    public string? Class { get; set; }
 
     protected override void OnInitialized()
     {
