--- a/BLAZAMGui/Navs/NavMenu.razor
+++ b/BLAZAMGui/Navs/NavMenu.razor
@@ -85,7 +85,7 @@
 
     }
 
-    public async void GotoEntry(IDirectoryEntryAdapter entry)
+    public void GotoEntry(IDirectoryEntryAdapter entry)
     {
         
         Nav.NavigateTo(entry.SearchUri);
