--- a/BLAZAMGui/UI/Dashboard/Widgets/LockedOutUsers.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/LockedOutUsers.razor
@@ -30,7 +30,7 @@
 
                             @if (@context.Item.CanUnlock)
                             {
-                            <MudMenuItem OnClick="(()=>{UnlockAccount(context.Item);})" Icon="@Icons.Outlined.LockOpen">
+                            <MudMenuItem OnClick="(()=>{UnlockAccount(context.Item);})" Icon="@Icons.Material.Outlined.LockOpen">
                                 @AppLocalization["Unlock User"]
                                 </MudMenuItem>
 
