--- a/BLAZAMGui/UI/OU/RenameOUModalContent.razor
+++ b/BLAZAMGui/UI/OU/RenameOUModalContent.razor
@@ -32,7 +32,7 @@
     }
 
 
-    async void SaveChanges()
+    void SaveChanges()
     {
         SnackBarService.Warning("The ou has been renamed but changes must be saved.");
         Close();
