--- a/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
@@ -43,12 +43,12 @@
         {
             try
             {
-                if (User.SetPassword(newPassword.ToSecureString(), requireChangeSwitch.Checked))
+                if (User.SetPassword(newPassword.ToSecureString(), requireChangeSwitch.Value))
                 {
 
 
                     SnackBarService.Success("Changed password for " + User.DisplayName);
-                    await AuditLogger.User.PasswordChanged(User, requireChangeSwitch.Checked);
+                    await AuditLogger.User.PasswordChanged(User, requireChangeSwitch.Value);
                     await InvokeAsync(Close);
 
                 }
