--- a/BLAZAMGui/UI/Settings/ManualApplicationUpdater.razor
+++ b/BLAZAMGui/UI/Settings/ManualApplicationUpdater.razor
@@ -174,7 +174,7 @@
             if (output != null)
             {
                 MessageService.ShowMessage<JobResultDialog>(output.ToDialogParameters(), AppLocalization["Update"]);
-                output.RunAsync();
+                await output.RunAsync();
                 // SnackBarService.Success("Update started successfully. The web application will restart and update momentarily.");
 
             }
