--- a/BLAZAM/Pages/Users/CreateUser.razor
+++ b/BLAZAM/Pages/Users/CreateUser.razor
@@ -4,148 +4,182 @@
 
 
 <AppPageTitle>Create User</AppPageTitle>
-<MudTabs PanelClass="mx-auto mud-container mud-container-maxwidth-sm" @ref=Tabs Elevation="0" Outlined="true" @bind-ActivePanelIndex="SelectedStep" Centered=true>
+<MudContainer MaxWidth="MaxWidth.ExtraExtraLarge">
+    <MudTabs PanelClass="mx-auto w-100"
+             @ref=Tabs
+             Elevation="0"
+             Outlined="true"
+             @bind-ActivePanelIndex="SelectedStep"
+             Centered=true>
 
-    <MudTabPanel>
-        <TabContent>
-            Template
-        </TabContent>
-        <ChildContent>
-            @if (Templates != null && Templates.Count(t => t.DeletedAt == null && t.Visible) > 0)
-            {
-                <MudSelectList Values="TemplateCategories"
-                               @bind-Value=SelectedCategory />
+        <MudTabPanel>
+            <TabContent>
+                Template
+            </TabContent>
+            <ChildContent>
 
-                <MudPaper Width="300px">
-                    <MudList SelectedItemChanged=@SetTemplate Clickable="true">
-                        @foreach (var template in Templates.Where(t => t.DeletedAt == null && t.Visible))
-                        {
-                            <MudListItem Text="@template.Name" Value="template" />
-                        }
-                    </MudList>
-                </MudPaper>
-            }
-            else
-            {
-                <MudPaper Width="300px">
-                    <MudText>@AppLocalization["There are no templates available"]</MudText>
-                    <AuthorizeView Roles="@UserRoles.SuperAdmin">
-                        <MudLink OnClick="@(()=>{Nav.NavigateTo("/templates");})">Create One</MudLink>
+                @if (Templates != null && Templates.Count(t => t.DeletedAt == null && t.Visible) > 0)
+                {
+                    @* <MudSelectList Values="TemplateCategories"
+                @bind-Value=SelectedCategory /> *@
 
-                    </AuthorizeView>
-                </MudPaper>
-            }
-            <MudButton Color=Color.Secondary OnClick="@(()=>{custom=true; newUser=null; SelectedTemplate=null; SelectedStep=4;})">Custom</MudButton>
+                    <MudCarousel Style="height:50vh"
+                                 ShowArrows=false
+                                 ShowBullets=false
+                                 EnableSwipeGesture=false
+                                 AutoCycle=false
+                                 @bind-SelectedIndex=_templateCarouselIndex
+                                 TData="object">
+                        <MudCarouselItem Class="pa-5">
+                            <FlexContainer>
+                                @foreach (var category in TemplateCategories)
+                                {
+                                    <MudButton OnClick=@(()=>{SelectedCategory=category; _templateCarouselIndex=1;}) Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large">@category</MudButton>
+                                }
 
-            <MudButton Disabled=@(SelectedTemplate is null && custom!=true) Color=Color.Success OnClick="@(()=>{if(custom==true)SelectedStep=4;else selectedStep=1;})">Next</MudButton>
-        </ChildContent>
+                            </FlexContainer>
+                        </MudCarouselItem>
 
-    </MudTabPanel>
+                        <MudCarouselItem Class="pa-5">
+                            <MudFab StartIcon="@Icons.Material.Filled.ArrowBack"
+                                    Size="Size.Small"
+                                    OnClick="@(()=>{_templateCarouselIndex=0;})"
+                                    Color="Color.Primary" />
+                            <FlexContainer>
 
-    <MudTabPanel Class=@(SelectedTemplate!=null?"":"d-none") Disabled=@( SelectedTemplate==null)>
-        <TabContent>
-            @AppLocalization["Name"]
-        </TabContent>
-        <ChildContent>
+                                @foreach (var template in Templates.Where(t => t.DeletedAt == null && t.Visible))
+                                {
+                                    <MudButton OnClick=@(()=>{SetTemplate(template);}) Variant="Variant.Filled" Color="Color.Primary" Size="Size.Large">@template.Name</MudButton>
 
+                                }
+                            </FlexContainer>
 
-            <NewUserNameEntry @bind-NewUserName=@newUserName OnNext="CreateTemplateUser" OnBack="@(()=>{SelectedStep=0;})" />
+                        </MudCarouselItem>
+                    </MudCarousel>
 
+                }
+                else
+                {
+                    <MudPaper Width="300px">
+                        <MudText>@AppLocalization["There are no templates available"]</MudText>
+                        <AuthorizeView Roles="@UserRoles.SuperAdmin">
+                            <MudLink OnClick="@(()=>{Nav.NavigateTo("/templates");})">Create One</MudLink>
 
+                        </AuthorizeView>
+                    </MudPaper>
+                }
+                <MudButton Color=Color.Secondary OnClick="@(()=>{custom=true; newUser=null; SelectedTemplate=null; SelectedStep=4;})">Custom</MudButton>
 
-        </ChildContent>
+                <MudButton Disabled=@(SelectedTemplate is null && custom!=true) Color=Color.Success OnClick="@(()=>{if(custom==true)SelectedStep=4;else selectedStep=1;})">Next</MudButton>
+            </ChildContent>
 
-    </MudTabPanel>
+        </MudTabPanel>
 
-    <MudTabPanel Class=@(SelectedTemplate!=null?"":"d-none") Disabled="@(newUser==null)">
-        <TabContent>
-            @AppLocalization["Fields"]
-        </TabContent>
-        <ChildContent>
-            <NewTemplateUser User="@newUser" DirectoryTemplate="SelectedTemplate" />
-            <MudButton Disabled=LoadingData Color=Color.Primary OnClick="@(()=>{SelectedStep=1;})">Back</MudButton>
-
-        </ChildContent>
-
-    </MudTabPanel>
-
-    <MudTabPanel Class=@(SelectedTemplate!=null?"":"d-none") Disabled="@(newUser==null)">
-        <TabContent>
-            @AppLocalization["Groups"]
-        </TabContent>
-        <ChildContent>
-            <MemberOfList Model="@newUser" />
-
-            <MudButton Disabled=LoadingData Color=Color.Primary OnClick="@(()=>{SelectedStep=2;})">Back</MudButton>
-            <MudButton Color=Color.Success OnClick="@(()=>{SelectedStep=6;})">Next</MudButton>
-
-        </ChildContent>
-
-    </MudTabPanel>
+        <MudTabPanel Class=@(SelectedTemplate!=null?"":"d-none") Disabled=@( SelectedTemplate==null)>
+            <TabContent>
+                @AppLocalization["Name"]
+            </TabContent>
+            <ChildContent>
 
 
-    <MudTabPanel Class=@(custom==true?"":"d-none") Disabled="@(custom==false)">
-        <TabContent>
-            @AppLocalization["OU"]
-        </TabContent>
-        <ChildContent>
-            <OUTreeView SelectedOUChanged="OUSelected" />
-
-            <MudTextField Label="@AppLocalization["Display Name"]" @bind-Value="@customUserDisplayName" />
+                <NewUserNameEntry @bind-NewUserName=@newUserName OnNext="CreateTemplateUser" OnBack="@(()=>{SelectedStep=0;})" />
 
 
 
-            <MudButton Color=Color.Primary OnClick="@(()=>{SelectedStep=0;})">Back</MudButton>
-            <MudButton Disabled=@(customUserDisplayName.IsNullOrEmpty()&& selectedOU!=null) Color=Color.Success OnClick="@(async()=>{await CreateCustomUser();selectedStep=5;})">Next</MudButton>
+            </ChildContent>
+
+        </MudTabPanel>
+
+        <MudTabPanel Class=@(SelectedTemplate!=null?"":"d-none") Disabled="@(newUser==null)">
+            <TabContent>
+                @AppLocalization["Fields"]
+            </TabContent>
+            <ChildContent>
+                <NewTemplateUser User="@newUser" DirectoryTemplate="SelectedTemplate" />
+                <MudButton Disabled=LoadingData Color=Color.Primary OnClick="@(()=>{SelectedStep=1;})">Back</MudButton>
+
+            </ChildContent>
+
+        </MudTabPanel>
+
+        <MudTabPanel Class=@(SelectedTemplate!=null?"":"d-none") Disabled="@(newUser==null)">
+            <TabContent>
+                @AppLocalization["Groups"]
+            </TabContent>
+            <ChildContent>
+                <MemberOfList Model="@newUser" />
+
+                <MudButton Disabled=LoadingData Color=Color.Primary OnClick="@(()=>{SelectedStep=2;})">Back</MudButton>
+                <MudButton Color=Color.Success OnClick="@(()=>{SelectedStep=6;})">Next</MudButton>
+
+            </ChildContent>
+
+        </MudTabPanel>
 
 
-        </ChildContent>
+        <MudTabPanel Class=@(custom==true?"":"d-none") Disabled="@(custom==false)">
+            <TabContent>
+                @AppLocalization["OU"]
+            </TabContent>
+            <ChildContent>
+                <OUTreeView SelectedOUChanged="OUSelected" />
 
-    </MudTabPanel>
-    <MudTabPanel Class=@(custom==true?"":"d-none") Disabled="@(newUser==null)">
-        <TabContent>
-            @AppLocalization["Details"]
-        </TabContent>
-        <ChildContent>
-            @*TODO: The following binding cause the next button to not update when validation is reached, updates are controlled from
-            this element
-            *@
-            <ViewUser DirectoryEntry="@newUser" @bind-ConfirmPassword=@customConfirmPassword @bind-Password=customPassword />
-            <MudButton Color=Color.Primary OnClick="@(()=>{SelectedStep=4;})">Back</MudButton>
-            <MudButton Color=Color.Success
-                       OnClick="@(()=>{
+                <MudTextField Label="@AppLocalization["Display Name"]" @bind-Value="@customUserDisplayName" />
+
+
+
+                <MudButton Color=Color.Primary OnClick="@(()=>{SelectedStep=0;})">Back</MudButton>
+                <MudButton Disabled=@(customUserDisplayName.IsNullOrEmpty()&& selectedOU!=null) Color=Color.Success OnClick="@(async()=>{await CreateCustomUser();selectedStep=5;})">Next</MudButton>
+
+
+            </ChildContent>
+
+        </MudTabPanel>
+        <MudTabPanel Class=@(custom==true?"":"d-none") Disabled="@(newUser==null)">
+            <TabContent>
+                @AppLocalization["Details"]
+            </TabContent>
+            <ChildContent>
+                @*TODO: The following binding cause the next button to not update when validation is reached, updates are controlled from
+                this element
+                *@
+                <ViewUser DirectoryEntry="@newUser" @bind-ConfirmPassword=@customConfirmPassword @bind-Password=customPassword />
+                <MudButton Color=Color.Primary OnClick="@(()=>{SelectedStep=4;})">Back</MudButton>
+                <MudButton Color=Color.Success
+                           OnClick="@(()=>{
 SelectedStep=6;
 if(newUser?.NewPassword==null || !newUser.NewPassword.Equals(customConfirmPassword))
 newUser?.StagePasswordChange(customConfirmPassword.ToSecureString());
 })"
-                       Disabled=@(customConfirmPassword.IsNullOrEmpty()||customPassword.IsNullOrEmpty()||!customPassword.Equals(customConfirmPassword))>
+                           Disabled=@(customConfirmPassword.IsNullOrEmpty()||customPassword.IsNullOrEmpty()||!customPassword.Equals(customConfirmPassword))>
 
-                @AppLocalization["Next"]
-            </MudButton>
-        </ChildContent>
+                    @AppLocalization["Next"]
+                </MudButton>
+            </ChildContent>
 
-    </MudTabPanel>
-
-
-    <MudTabPanel Disabled=@(newUser==null)>
-        <TabContent>
-
-            @AppLocalization["Confirm"]
-        </TabContent>
-        <ChildContent>
-            <ConfirmNewUser User="@newUser" DirectoryTemplate="SelectedTemplate" />
-
-        </ChildContent>
-
-    </MudTabPanel>
-</MudTabs>
+        </MudTabPanel>
 
 
+        <MudTabPanel Disabled=@(newUser==null)>
+            <TabContent>
+
+                @AppLocalization["Confirm"]
+            </TabContent>
+            <ChildContent>
+                <ConfirmNewUser User="@newUser" DirectoryTemplate="SelectedTemplate" />
+
+            </ChildContent>
+
+        </MudTabPanel>
+    </MudTabs>
+
+</MudContainer>
 
 
 @code {
     string customConfirmPassword;
     string customPassword;
+    int _templateCarouselIndex = 0;
     int selectedStep;
     int SelectedStep
     {
@@ -293,10 +327,11 @@ newUser?.StagePasswordChange(customConfirmPassword.ToSecureString());
         await InvokeAsync(StateHasChanged);
     }
 
-    async Task SetTemplate(MudListItem selectedTemplate)
+    async Task SetTemplate(DirectoryTemplate selectedTemplate)
     {
-        SelectedTemplate = selectedTemplate.Value as DirectoryTemplate;
+        SelectedTemplate = selectedTemplate; 
         custom = false;
+        SelectedStep = 1;
         await InvokeAsync(StateHasChanged);
     }
 
