Added new category modal #247

--- a/BLAZAMGui/UI/Inputs/MudSelectList.razor
+++ b/BLAZAMGui/UI/Inputs/MudSelectList.razor
@@ -18,6 +18,8 @@
            Class=@Class
            OnClearButtonClick=@OnClearButtonClick
            Adornment=@Adornment
+           AdornmentIcon=@AdornmentIcon
+           OnAdornmentClick="@OnAdornmentClick"
            AutoFocus=@AutoFocus
            Disabled=@Disabled
            Clearable=@Clearable
