--- a/BLAZAMGui/UI/Settings/DatabaseStatus.razor
+++ b/BLAZAMGui/UI/Settings/DatabaseStatus.razor
@@ -8,26 +8,50 @@
 <MudForm>
     <MudText>To change these settings, modify appsettings.json in the application directory.</MudText>
     <SettingsField Label="@AppLocalization["DB Type"]">
-        <MudTextField Disabled=true Label="@AppLocalization["DB Type"]" Value="@Context?.ConnectionString?.DatabaseType"/>
+        <MudTextField Disabled=true Label="@AppLocalization["DB Type"]" Value="@Context?.ConnectionString?.DatabaseType" />
     </SettingsField>
-
-    <SettingsField Label="@AppLocalization["Server"]">
-        <MudTextField Disabled=true Label="@AppLocalization["Server"]" Value="@Context?.ConnectionString?.ServerAddress" />
-    </SettingsField>
-
-    <SettingsField Label="@AppLocalization["Port"]">
-        <MudTextField Disabled=true Label="@AppLocalization["Port"]"  Value="@Context?.ConnectionString?.ServerPort" />
-    </SettingsField>
-
-    <SettingsField Label="@AppLocalization["Database"]">
-        <MudTextField Disabled=true Label="@AppLocalization["Database"]" Value="@Context?.ConnectionString?.Database" />
-    </SettingsField>
-        <SettingsField Label="@AppLocalization["Export Database"]">
-
-            <MudButton OnClick="Export" Color="Color.Success">Export</MudButton>
-
+    @if (ApplicationInfo.InDemoMode && UserStateService.CurrentUsername == "Demo")
+    {
+        <SettingsField Label="@AppLocalization["Server"]">
+            <MudTextField Disabled=true Label="@AppLocalization["Server"]" Value=@("Private") />
         </SettingsField>
-      
+    }
+    else
+    {
+        <SettingsField Label="@AppLocalization["Server"]">
+            <MudTextField Disabled=true Label="@AppLocalization["Server"]" Value="@Context?.ConnectionString?.ServerAddress" />
+        </SettingsField>
+    }
+    @if (ApplicationInfo.InDemoMode && UserStateService.CurrentUsername == "Demo")
+    {
+        <SettingsField Label="@AppLocalization["Port"]">
+            <MudTextField Disabled=true Label="@AppLocalization["Port"]" Value=@("Private") />
+        </SettingsField>
+    }
+    else
+    {
+        <SettingsField Label="@AppLocalization["Port"]">
+            <MudTextField Disabled=true Label="@AppLocalization["Port"]" Value="@Context?.ConnectionString?.ServerPort" />
+        </SettingsField>
+    }
+    @if (ApplicationInfo.InDemoMode && UserStateService.CurrentUsername == "Demo")
+    {
+        <SettingsField Label="@AppLocalization["Database"]">
+            <MudTextField Disabled=true Label="@AppLocalization["Database"]" Value=@("Private") />
+        </SettingsField>
+    }
+    else
+    {
+        <SettingsField Label="@AppLocalization["Database"]">
+            <MudTextField Disabled=true Label="@AppLocalization["Database"]" Value="@Context?.ConnectionString?.Database" />
+        </SettingsField>
+    }
+    <SettingsField Label="@AppLocalization["Export Database"]">
+
+        <MudButton OnClick="Export" Color="Color.Success">Export</MudButton>
+
+    </SettingsField>
+
 </MudForm>
 @code {
     #nullable disable warnings
@@ -35,23 +59,24 @@
     {
         await base.OnInitializedAsync();
 
-       
+
 
         LoadingData = false;
         await InvokeAsync(StateHasChanged);
     }
-    void Export()
+    async void Export()
     {
-        MemoryStream memoryStream = new MemoryStream();
+   
+            MemoryStream memoryStream = new MemoryStream();
 
-        IJob exportJob = new Job(AppLocalization["Export Database"], CurrentUser.Username);
-        IJobStep exportData = new JobStep(AppLocalization["Export Data"], (step) =>
+            IJob exportJob = new Job(AppLocalization["Export Database"], CurrentUser.Username);
+            IJobStep exportData = new JobStep(AppLocalization["Export Data"], (step) =>
         {
             Context.Export("export");
             return true;
 
         });
-        IJobStep packageData = new JobStep(AppLocalization["Prepare Files"], (step) =>
+            IJobStep packageData = new JobStep(AppLocalization["Prepare Files"], (step) =>
     {
         ZipArchive exportZip = new ZipArchive(memoryStream, ZipArchiveMode.Create);
         var exportDir = new SystemDirectory("export");
@@ -60,9 +85,12 @@
         return true;
 
     });
-        exportJob.Steps.Add(exportData);
-        exportJob.Steps.Add(packageData);
-        exportJob.Run();
-        exportJob.ShowJobDetailsDialog(MessageService);
+            exportJob.Steps.Add(exportData);
+            exportJob.Steps.Add(packageData);
+            await exportJob.ShowJobDetailsDialog(MessageService);
+            await InvokeAsync(StateHasChanged);
+            await exportJob.RunAsync();
+
+
     }
 }
