--- a/BLAZAMGui/UI/Settings/Templates/TemplateOverride.razor
+++ b/BLAZAMGui/UI/Settings/Templates/TemplateOverride.razor
@@ -13,7 +13,7 @@
     </MudBadge>
     <MudPopover Open="@_popoverOpen" Fixed="true" Class="px-4 pt-4">
         <div class="d-flex flex-column">
-            <MudText>@AppLocalization["Inherited from"] <MudLink OnClick="@(()=>{Nav.NavigateTo("/templates/"+SourceTemplate.Id);})"> @SourceTemplate</MudLink></MudText>
+            <MudText>@AppLocalization["Inherited from"] <MudLink OnClick="@(()=>{Nav.NavigateTo("/templates/"+SourceTemplate.Id,true);})"> @SourceTemplate</MudLink></MudText>
             <MudButton OnClick="@(()=>{_popoverOpen=false;})" Class="ml-auto mr-n3 mb-1" Color="Color.Error">Close</MudButton>
         </div>
     </MudPopover>
